# jama_python_mcp

./: README.md  main.py  pyproject.toml
src/jama_mcp_server/: __init__.py  env_config  jama_client.py  mcp_server.py  nlp_processor.py  vector_store.py
